...
        onClick = {
            onEvent(HomeEvent.SomethingWentWrong)
        },
        content = {
            Text(text = stringResource(id = R.string.try_again))
        },
        modifier = Modifier.testTag("tryAgain")
    )
}
@Composable
fun LoadingScreen() {
    Box(
        modifier = Modifier.fillMaxSize(),
        contentAlignment = Alignment.Center
    ) {
        CircularProgressIndicator(
            modifier = Modifier.testTag("loadingSpinner")
        )
    }
}

@Preview
@Composable
...
