<resources>
    <string name="app_name">YBS Coding Challenge</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">try again</string>
    <string name="no_matching_pictures">No pictures found matching search terms. Please try again</string>
</resources>